--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-route-example-with-codecademy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://FeynmanDNA.github.io/ReactJScodecademy",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -13,6 +14,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
